fixed overflow of body element by setting margin of body to zero

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,9 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    
-
+    /* Default margin of body is set by browser (usually 8px according to stackoverflow)
+        set margin:0px and width and height to 100% of viewport. */
+    margin: 0px;
     width: 100vw;
     height: 100vh;
         
